<resources>
    <string name="app_name">Workout Builder</string>
    <string name="about">Have you ever considered starting an exercise routine but then became overwhelmed by the sheer amount of information out there on the topic? We feel you, and that\'s why we decided to develop a solution
    designed to strip all the clutter and conflicting information out there and provide you with a personalized program based on your current situation and future goals. Our process is simple, and consists of the following three steps:\n\n
        <b>1. Goal Discovery</b>\n
    <b>2. Profile Matching</b>\n
    <b>3. Program Creation</b>\n\n
        And it is through these three steps that we aspire to build you a personalized exercise routine. Regardless of whether your goals
        are to build strength and muscle, flexilibity and endurance, or simply to become the greatest version of yourself, we are confident in
        our ability to provide you with the personalized roadmap to get there.
    </string>
    <string name="k_base_intro">Welcome to the Knowledge Base! It is here where you can extract a wide variety of valuable
    information on a myriad of topics related to health and fitness. Click a button of interest below to learn more about
    the topic!</string>
    <string name="comp_iso_intro">Compound vs. Isolation Movements</string>
    <string name="comp_iso_desc"><b>Compound Movements</b> recruit a wide variety of muscle groups, stabilizer muscles,
    and tend to be much more taxing on the body and central nervous system. As such, it is best to perform these types of
    movements at the beginning of every workout, since this is when the body is able to provide the highest amount of output.
    Examples of compound movements are as follows:\n\n
        - Bench Press\n
        - Squats\n
        - Deadlifts\n
        - Pull ups\n\n
    <b>Isolation Movements</b> differ from compound movements in that they typically target one muscle group, are normally
    done for higher reps, and don\'t require as much output, making them much less taxing on the body and central nervous system.
    It it best to place these types of movements at the end of your workout since this is the point where you are running
    out of energy, but are still able to squeeze out a few more reps. Examples of isolation movements are as follows:\n\n
        - Bicep curl\n
        - Lateral Raise\n
        - Skullcrushers\n
        - Chest Flys\n
    </string>
    <string name="sets_reps_rest">Sets/Reps/Rest</string>
    <string name="sets">Sets</string>
    <string name="sets_info">Prescribing a specific number of sets per workout is a very nuanced topic that depends on
    a variety of factors. One thing that is known, however, is that doing 10-20 sets/week for every muscle group is
    optimal if you\'re looking to get the most value out of your routine. So depending on the number of days per week
    you plan on going to the gym, a good general rule of thumb is to not allow your individual workouts to exceed 30 sets,
    but closer to 20 is probably more ideal.</string>
    <string name="reps">Reps</string>
    <string name="reps_info">Manipulating your reps is a much less nuanced topic than sets, and generally there exists
    an optimal rep range for every goal. If your goal is the build muscle, then you\'d want to work within the 8-15 rep range.
    If you\'d rather focus on gaining strength, then the optimal range would be anywhere from 3-8. And finally, if you\'d like
    to gain muscular endurance then the 15-30 rep range is recommended.</string>
    <string name="rest">Rest</string>
    <string name="rest_info">Rest aligns heavily with rep ranges, in that there exists an optimal rest time for every goal.
    If you\'re focusing on building strength, then you want to rest longer to give your muscles more time to fully recover
    between sets, thereby enabling you to lift at max effort for every set. If your primary goal is to build muscle, then the
    optimal rest time would be anywhere from 1-2 minutes, and if you\'re hoping to gain muscular endurance then you want to
    rest very minimally, with the optimal period being anywhere from 0-1 min.</string>
    <string name="helpfulTipsText1">Here are some different activities and tips that can help users
        get the most out of their workouts.
    </string>
    <string name="tip1">1. Listen to Music</string>
    <string name="tip1Text">Listening to music while working out can help you get motivated and can
        put you in a better mood. Music can help you psychologically which can help boost performance
        while working out as your body may have a tendency to move to the beat. As such, listening to
        fast paced music can help improve overall physical performance while also increasing
        motivation.
    </string>
    <string name="tip2">2. Drink Lots of Water</string>
    <string name="tip2Text">While this may seem obvious, workouts cause you to sweat which in turn
        decreases the amount of fluid in your body. As such, overtime the workout may feel more
        difficult and strenuous. Drinking lots of water while working out can help improve overall
        performance by preventing possible dehydration.
    </string>
    <string name="tip3">3. Warm Up Before Working Out</string>
    <string name="tip3Text">Doing a warm up for 5-10 minutes before starting you work out can help
        to improve your workout experience by preventing any possible injuries that may occur from
        strenuous exercise.
    </string>
    <string name="question_age">How old are you?</string>
    <string name="question_height">What is your height (in cm)?</string>
    <string name="question_weight">What is your weight (in kg)?</string>
    <string name="question_target_weight">What is your target weight (in kg)?</string>
    <string name="question_workout_length">How long do you want to work out for per session?</string>
    <string name="question_workout_frequency">How many days per week do you want to work out?</string>
    <string name="question_fitness_level">What is your fitness level now (how often do you work out)?</string>
    <string name="question_build_goal">What is your build goal?</string>
    <string name="question_workout_area">What area do you want to work out?</string>
    <string name="question_weights">Would you like to workout with or without weights?</string>
    <string name="question_gym">Are you working out in a gym (with machines) or at home (without machines)?</string>
    <string name="three_day_profile">Your answers indicate that, although you aspire to build muscle and strength, you are
    limited in the amount of time you can devote to exercise. As such, we believe that the following workout plan
    is best suited for your current situation</string>
    <string name="three_day_plan"><b>Full body split - 3 days a week</b>\n\n
                                    <b>Workout 1:</b>\n\n
                                    Bench Press\n
                                    Pull ups\n
                                    Squats\n
                                    Shoulder Press\n
                                    Incline Dumbbell Curls\n
                                    Tricep Pulldown\n
                                    \n
                                    <b>Workout 2:</b>\n\n
                                    Deadlift\n
                                    Dips\n
                                    Bent Over Rows\n
                                    Dumbbell Lateral Raise\n
                                    Barbell Bicep Curl\n
                                    \n
                                    <b>Workout 3:</b>\n\n
                                    Squats\n
                                    Shoulder Press\n
                                    Pec Deck\n
                                    Dumbbell Rear Delt Fly\n
                                    Hammer Curls\n
                                    Skullcrushers\n</string>
    <string name="four_day_profile">Your answers indicate that, although you are able to spend more time in the gym than some,
    your time is still limited to some degree. As such, the plan we believe would best fit your lifestyle is as follows:</string>
    <string name="four_day_plan"><b>Upper/Lower Split - 4 days a week</b>\n\n
                                        <b>Upper 1</b>\n\n
                                        Bench Press\n
                                        Bent Over Row\n
                                        Shoulder Press\n
                                        Hercules Curl\n
                                        Dips\n
                                        \n
                                        <b>Lower 1</b>\n\n
                                        Leg extensions\n
                                        Straight Legged Deadlifts\n
                                        Hip Thrusts\n
                                        Calf Raises\n
                                        \n
                                        <b>Upper 2</b>\n\n
                                        Cable Crossovers\n
                                        Pull ups
                                        Arnold Press
                                        Hammer Curls
                                        Tricep Pulldown\n
                                        \n
                                        <b>Lower 2</b>\n\n
                                        Squats\n
        `                               Bulgarian Split Squats\n
                                        Calf Raises\n
                                        Barbell Walking Lunges</string>
    <string name="six_day_profile">Your answers indicate that you hope to gain as much strength and muscle as possible and that time is no issue.
    Given this, we believe that the following program will fit your lifestyle the best. It will have you in the gym 6 days a
    week with each muscle group being hit twice per week.</string>
</resources>