<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:context=".KnowledgeBase">

        <Button
            android:id="@+id/back"
            android:layout_width="87dp"
            android:layout_height="47dp"
            android:layout_marginTop="10dp"
            android:text="Back"
            android:textColor="@color/white"
            app:backgroundTint="#050505"></Button>

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="128dp"
            android:layout_marginLeft="128dp"
            android:layout_marginTop="50dp"
            android:text="Knowledge Base"
            android:textColor="@color/black"
            android:textSize="32dp" > </TextView>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="319dp"
            android:layout_height="225dp"
            android:layout_below="@id/header"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/knowledge_base_icon1" />

        <TextView
            android:id="@+id/knowledge_base_intro"
            android:layout_below="@id/imageView3"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="18dp"
            android:gravity="center_horizontal"
            android:text="@string/k_base_intro"
            android:textSize="18dp" />

        <Button
            android:id="@+id/sets_reps_rest"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/knowledge_base_intro"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:background="@color/black"
            android:text="Sets/Reps/Rest"
            android:textColor="#FFFFFF"
            app:backgroundTint="#3A3C3C" />

        <Button
            android:id="@+id/comp_iso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sets_reps_rest"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:background="@color/black"
            android:text="Isolation vs Compound"
            android:textColor="#FFFFFF"
            app:backgroundTint="#3A3C3C"
            android:onClick="comp_iso_header"/>

        <TextView
            android:id="@+id/comp_iso_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/comp_iso"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/comp_iso_intro"
            android:textSize="25dp">
        </TextView>
        <TextView
            android:id="@+id/comp_iso_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/comp_iso_header"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/comp_iso_desc"
            android:textSize="25dp">
        </TextView>

    </RelativeLayout>
</ScrollView>